--- a/macos/Brewfile
+++ b/macos/Brewfile
@@ -3,30 +3,51 @@ tap "dracula/install"
 tap "epk/epk"
 tap "jesseduffield/lazygit"
 tap "krishkrosh/apps"
+brew "asciinema"
+brew "bat"
 brew "btop"
+brew "cbonsai"
 brew "chafa"
+brew "cheat"
+brew "cmake"
+brew "cmatrix"
 brew "colima"
 brew "diff-so-fancy"
 brew "docker"
+brew "eza"
 brew "fastfetch"
+brew "fzf"
 brew "gemini-cli"
 brew "git"
+brew "git-extras"
+brew "glow"
 brew "gnupg"
+brew "gping"
 brew "hashcat"
 brew "helix"
 brew "lazygit"
+brew "mdcat"
 brew "mysql-client"
 brew "neovim"
 brew "newsboat"
+brew "nnn"
+brew "pipes-sh"
+brew "pkgconf"
 brew "postgresql@18", restart_service: :changed
 brew "starship"
+brew "thefuck"
 brew "tmux"
 brew "tmuxp"
 brew "tree"
+brew "tty-clock"
+brew "wxmaxima"
 brew "yazi"
+brew "zoxide"
 brew "ddev/ddev/ddev"
 cask "alacritty"
+cask "bambu-studio"
 cask "chromium"
+cask "claude-code"
 cask "curseforge"
 cask "devtoys"
 cask "dracula-xcode"
@@ -35,8 +56,14 @@ cask "font-dejavu"
 cask "font-sf-mono-nerd-font"
 cask "ghostty"
 cask "iterm2"
+cask "microsoft-auto-update"
+cask "microsoft-teams"
+cask "obs"
 cask "orbstack"
 cask "powershell"
 cask "scenebuilder"
+cask "syncthing-app"
 cask "tabby"
 cask "trackweight"
+cask "virtualbox"
+cask "wezterm"
